--- a/assets/style.css
+++ b/assets/style.css
@@ -34,14 +34,43 @@
     width: 20%;
 }
 
-.highlighted img {
-    display: none;
+.img_container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.title {
+    color: white;
+    position: absolute;
+    right: 1rem;
+    bottom: 5rem;
+}
+
+.text {
+    color: white;
+    position: absolute;
+    left: 6rem;
+    right: 1rem;
+    bottom: 2.5rem;
+    text-align: right;
+}
+
+.highlighted .img_container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.carousel .highlighted .active {
+.highlighted .img_container {
+    display: none;
+}
+
+.highlighted .img_container.active {
+    display: block !important;
+}
+
+.carousel .highlighted.active {
     display: block;
 }
 
