--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,16 @@
     width: 80%;
 }
 
+button{
+    padding: 0.5rem;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: aqua;
+    z-index: 1;
+}
+
 .thumbs {
     position: relative;
     display: flex;
