--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,7 @@ button{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .highlighted .img_container {
